$Id: CHANGES,v 1.5 2002/01/26 14:18:18 mavetju Exp $

version 1.5
	- better input checking regarding validity of the header
	  of the UDP packet (bug anton.holleman@nominum.com)

version 1.4
	- added auto-configure script
	- fixed problem with strsep() under Solaris
	- added FILES, CONTACT

version 1.3
	- added chaddr filter, contributed by Peter Apian-Bennewitz
	  <apian@ise.fhg.de>
	- client-identifier is now printed as long as it is.
	  (bug anton.holleman@nominum.com)

version 1.2
	- forgot to update the man-page.

version 1.1
	- Sometimes, specially with bootp-packets, the option-packet
	  would contain rubbish data which dhcpdump tried to parse.
	  And that caused an overflow in the arrays, which caused
	  a segfault.
	- Added more tables so the numerical values of fields (like
	  network type, requested parameter list) are not only
	  numeric anymore.
	- Better layout of hex-strings.

version 1.0
	- Initial release