@@ -1,5 +1,5 @@
 //
-// $Id: dhcp_options.h,v 1.2 2000/12/04 13:37:19 edwin Exp $
+// $Id: dhcp_options.h,v 1.1 2001/08/24 00:44:16 mavetju Exp $
 //
 
 //
@@ -85,184 +85,184 @@ char *dhcp_options[]={
 /*  74 */	"IRC server",						/**/
 /*  75 */	"StreetTalk server",					/**/
 /*  76 */	"StreetTalk directory assistance server",		/**/
-/*  77 */	"",
-/*  78 */	"",
-/*  79 */	"",
-/*  80 */	"",
-/*  81 */	"",
-/*  82 */	"",
-/*  83 */	"",
-/*  84 */	"",
+/*  77 */	"User-class Identification",
+/*  78 */	"SLP-directory-agent",
+/*  79 */	"SLP-service-scope",
+/*  80 */	"Naming Authority",
+/*  81 */	"Client FQDN",						/**/
+/*  82 */	"Relay Agent Information",
+/*  83 */	"Agent Remote ID",
+/*  84 */	"Agent Subnet Mask",
 /*  85 */	"NDS server",						/**/
 /*  86 */	"NDS tree name",					/**/
 /*  87 */	"NDS context",						/**/
-/*  88 */	"",
-/*  89 */	"",
-/*  90 */	"",
-/*  91 */	"",
-/*  92 */	"",
-/*  93 */	"",
-/*  94 */	"",
-/*  95 */	"",
-/*  96 */	"",
-/*  97 */	"",
+/*  88 */	"IEEE 1003.1 POSIX",
+/*  89 */	"FQDN",
+/*  90 */	"Authentication",
+/*  91 */	"Vines TCP/IP",
+/*  92 */	"Server Selection",
+/*  93 */	"Client System",
+/*  94 */	"Client NDI",
+/*  95 */	"LDAP",
+/*  96 */	"IPv6 Transitions",
+/*  97 */	"UUID/GUID",
 /*  98 */	"UPA servers",
-/*  99 */	"",
-/* 100 */	"",
-/* 101 */	"",
-/* 102 */	"",
-/* 103 */	"",
-/* 104 */	"",
-/* 105 */	"",
-/* 106 */	"",
-/* 107 */	"",
-/* 108 */	"",
-/* 109 */	"",
-/* 110 */	"",
-/* 111 */	"",
-/* 112 */	"",
-/* 113 */	"",
-/* 114 */	"",
-/* 115 */	"",
-/* 116 */	"Autoconfiguration",
-/* 117 */	"",
-/* 118 */	"",
-/* 119 */	"",
-/* 120 */	"",
-/* 121 */	"",
-/* 122 */	"",
-/* 123 */	"",
-/* 124 */	"",
-/* 125 */	"",
-/* 126 */	"",
-/* 127 */	"",
-/* 128 */	"",
-/* 129 */	"",
-/* 130 */	"",
-/* 131 */	"",
-/* 132 */	"",
-/* 133 */	"",
-/* 134 */	"",
-/* 135 */	"",
-/* 136 */	"",
-/* 137 */	"",
-/* 138 */	"",
-/* 139 */	"",
-/* 140 */	"",
-/* 141 */	"",
-/* 142 */	"",
-/* 143 */	"",
-/* 144 */	"",
-/* 145 */	"",
-/* 146 */	"",
-/* 147 */	"",
-/* 148 */	"",
-/* 149 */	"",
-/* 150 */	"",
-/* 151 */	"",
-/* 152 */	"",
-/* 153 */	"",
-/* 154 */	"",
-/* 155 */	"",
-/* 156 */	"",
-/* 157 */	"",
-/* 158 */	"",
-/* 159 */	"",
-/* 160 */	"",
-/* 161 */	"",
-/* 162 */	"",
-/* 163 */	"",
-/* 164 */	"",
-/* 165 */	"",
-/* 166 */	"",
-/* 167 */	"",
-/* 168 */	"",
-/* 169 */	"",
-/* 170 */	"",
-/* 171 */	"",
-/* 172 */	"",
-/* 173 */	"",
-/* 174 */	"",
-/* 175 */	"",
-/* 176 */	"",
-/* 177 */	"",
-/* 178 */	"",
-/* 179 */	"",
-/* 180 */	"",
-/* 181 */	"",
-/* 182 */	"",
-/* 183 */	"",
-/* 184 */	"",
-/* 185 */	"",
-/* 186 */	"",
-/* 187 */	"",
-/* 188 */	"",
-/* 189 */	"",
-/* 190 */	"",
-/* 191 */	"",
-/* 192 */	"",
-/* 193 */	"",
-/* 194 */	"",
-/* 195 */	"",
-/* 196 */	"",
-/* 197 */	"",
-/* 198 */	"",
-/* 199 */	"",
-/* 200 */	"",
-/* 201 */	"",
-/* 202 */	"",
-/* 203 */	"",
-/* 204 */	"",
-/* 205 */	"",
-/* 206 */	"",
-/* 207 */	"",
-/* 208 */	"",
-/* 209 */	"",
-/* 210 */	"",
-/* 211 */	"",
-/* 212 */	"",
-/* 213 */	"",
-/* 214 */	"",
-/* 215 */	"",
-/* 216 */	"",
-/* 217 */	"",
-/* 218 */	"",
-/* 219 */	"",
-/* 220 */	"",
-/* 221 */	"",
-/* 222 */	"",
-/* 223 */	"",
-/* 224 */	"",
-/* 225 */	"",
-/* 226 */	"",
-/* 227 */	"",
-/* 228 */	"",
-/* 229 */	"",
-/* 230 */	"",
-/* 231 */	"",
-/* 232 */	"",
-/* 233 */	"",
-/* 234 */	"",
-/* 235 */	"",
-/* 236 */	"",
-/* 237 */	"",
-/* 238 */	"",
-/* 239 */	"",
-/* 240 */	"",
-/* 241 */	"",
-/* 242 */	"",
-/* 243 */	"",
-/* 244 */	"",
-/* 245 */	"",
-/* 246 */	"",
-/* 247 */	"",
-/* 248 */	"",
-/* 249 */	"",
-/* 250 */	"",
-/* 251 */	"",
-/* 252 */	"",
-/* 253 */	"",
-/* 254 */	"",
+/*  99 */	"???",
+/* 100 */	"Printer Name",
+/* 101 */	"MDHCP",
+/* 102 */	"???",
+/* 103 */	"???",
+/* 104 */	"???",
+/* 105 */	"???",
+/* 106 */	"???",
+/* 107 */	"???",
+/* 108 */	"Swap Path",
+/* 109 */	"???",
+/* 110 */	"IPX Compatability",
+/* 111 */	"???",
+/* 112 */	"Netinfo Address",
+/* 113 */	"Netinfo Tag",
+/* 114 */	"URL",
+/* 115 */	"DHCP Failover",
+/* 116 */	"DHCP Autoconfiguration",
+/* 117 */	"Name Service Search",
+/* 118 */	"Subnet selection",
+/* 119 */	"Domain Search",
+/* 120 */	"SIP Servers DHCP Option",
+/* 121 */	"Classless Static Route",
+/* 122 */	"???",
+/* 123 */	"???",
+/* 124 */	"???",
+/* 125 */	"???",
+/* 126 */	"Extension",
+/* 127 */	"Extension",
+/* 128 */	"???",
+/* 129 */	"???",
+/* 130 */	"???",
+/* 131 */	"???",
+/* 132 */	"???",
+/* 133 */	"???",
+/* 134 */	"???",
+/* 135 */	"???",
+/* 136 */	"???",
+/* 137 */	"???",
+/* 138 */	"???",
+/* 139 */	"???",
+/* 140 */	"???",
+/* 141 */	"???",
+/* 142 */	"???",
+/* 143 */	"???",
+/* 144 */	"HP - TFTP file",
+/* 145 */	"???",
+/* 146 */	"???",
+/* 147 */	"???",
+/* 148 */	"???",
+/* 149 */	"???",
+/* 150 */	"???",
+/* 151 */	"???",
+/* 152 */	"???",
+/* 153 */	"???",
+/* 154 */	"???",
+/* 155 */	"???",
+/* 156 */	"???",
+/* 157 */	"???",
+/* 158 */	"???",
+/* 159 */	"???",
+/* 160 */	"???",
+/* 161 */	"???",
+/* 162 */	"???",
+/* 163 */	"???",
+/* 164 */	"???",
+/* 165 */	"???",
+/* 166 */	"???",
+/* 167 */	"???",
+/* 168 */	"???",
+/* 169 */	"???",
+/* 170 */	"???",
+/* 171 */	"???",
+/* 172 */	"???",
+/* 173 */	"???",
+/* 174 */	"???",
+/* 175 */	"???",
+/* 176 */	"???",
+/* 177 */	"???",
+/* 178 */	"???",
+/* 179 */	"???",
+/* 180 */	"???",
+/* 181 */	"???",
+/* 182 */	"???",
+/* 183 */	"???",
+/* 184 */	"???",
+/* 185 */	"???",
+/* 186 */	"???",
+/* 187 */	"???",
+/* 188 */	"???",
+/* 189 */	"???",
+/* 190 */	"???",
+/* 191 */	"???",
+/* 192 */	"???",
+/* 193 */	"???",
+/* 194 */	"???",
+/* 195 */	"???",
+/* 196 */	"???",
+/* 197 */	"???",
+/* 198 */	"???",
+/* 199 */	"???",
+/* 200 */	"???",
+/* 201 */	"???",
+/* 202 */	"???",
+/* 203 */	"???",
+/* 204 */	"???",
+/* 205 */	"???",
+/* 206 */	"???",
+/* 207 */	"???",
+/* 208 */	"???",
+/* 209 */	"???",
+/* 210 */	"Authenticate",
+/* 211 */	"???",
+/* 212 */	"???",
+/* 213 */	"???",
+/* 214 */	"???",
+/* 215 */	"???",
+/* 216 */	"???",
+/* 217 */	"???",
+/* 218 */	"???",
+/* 219 */	"???",
+/* 220 */	"???",
+/* 221 */	"???",
+/* 222 */	"???",
+/* 223 */	"???",
+/* 224 */	"???",
+/* 225 */	"???",
+/* 226 */	"???",
+/* 227 */	"???",
+/* 228 */	"???",
+/* 229 */	"???",
+/* 230 */	"???",
+/* 231 */	"???",
+/* 232 */	"???",
+/* 233 */	"???",
+/* 234 */	"???",
+/* 235 */	"???",
+/* 236 */	"???",
+/* 237 */	"???",
+/* 238 */	"???",
+/* 239 */	"???",
+/* 240 */	"???",
+/* 241 */	"???",
+/* 242 */	"???",
+/* 243 */	"???",
+/* 244 */	"???",
+/* 245 */	"???",
+/* 246 */	"???",
+/* 247 */	"???",
+/* 248 */	"???",
+/* 249 */	"MSFT - Classless route",
+/* 250 */	"???",
+/* 251 */	"???",
+/* 252 */	"MSFT - WinSock Proxy Auto Detect",
+/* 253 */	"???",
+/* 254 */	"???",
 /* 255 */	"End"};
 
 
